--- a/quiz-frontend/package.json
+++ b/quiz-frontend/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "reactjs-popup": "^1.5.0"
   }
 }
